--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha ./tests"
   },
   "author": "Ciro S. Costa <ciro9758@gmail.com> (http://www.cirocosta.com/)",
   "license": "ISC",
